--- a/stylesheet/media_labtop.css
+++ b/stylesheet/media_labtop.css
@@ -496,7 +496,7 @@ p.resume-prompt{
 }
 
 
-/*ipad laptops*/
+/*ipad labtops*/
 
 @media (max-width:2024px){
 
@@ -977,117 +977,123 @@ p.resume-prompt {
     display: none;
   }
 
-  p. {
-    display: block;
-    -webkit-transform: scale(.9);
-    -ms-transform: scale(.9);
-    -o-transform: scale(.9);
-    -moz-transform: scale(.9);
-    transform: scale(.9);
-    top: -110%;
-    animation: forphonetoshownoneprompt 1s linear infinite;
+  p.resume-prompt {
+    display: inline-block;
+    position: relative;
+    transform: scale(1.2);
+    opacity: 1;
+    padding-top: 3vh;
+    color: #666666;
+    animation: resumepromptcv 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll) * -1s);
     animation-iteration-count: 1;
     animation-fill-mode: both;
   }
 
-  @keyframes forphonetoshownoneprompt {
-    0%{
-      opacity: 0;
-      display: block;
+  @keyframes resumepromptcv {
+    0% {
+        color: #666666;
+      opacity: 1;
+      -webkit-ransform: scale(.85);
+      -moz-transform: scale(.85);
+      -ms-transform: scale(.85);
+      -o-transform: scale(.85);
+      transform: scale(.85);
     }
 
-    20% {
+    40% {
       opacity: 1;
-      display: block;
+      -webkit-ransform: scale(.85);
+      -moz-transform: scale(.85);
+      -ms-transform: scale(.85);
+      -o-transform: scale(.85);
+      transform: scale(.85);
+      color: #666666;
     }
+
     50% {
       opacity: 1;
-      display: block;
-    }
+      -webkit-ransform: scale(.85);
+      -moz-transform: scale(.85);
+      -ms-transform: scale(.85);
+      -o-transform: scale(.85);
+      transform: scale(.85);
+      color: darkgreen;
+      }
+
+      90% {
+        opacity: 1;
+        -webkit-ransform: scale(.85);
+        -moz-transform: scale(.85);
+        -ms-transform: scale(.85);
+        -o-transform: scale(.85);
+        transform: scale(.85);
+        color: navy;
+      }
+
     100% {
-      display: block;
       opacity: 1;
+      -webkit-ransform: scale(.85);
+      -moz-transform: scale(.85);
+      -ms-transform: scale(.85);
+      -o-transform: scale(.85);
+      transform: scale(.85);
+      color: #0f52ba;
     }
   }
 
-  div.forcvportwork {
-  	display: inherit;
-    height: 10px;
-  }
 
-  img.resume_pdf{
-    display: inline-block;
-    position: relative;
-      -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      -moz-transform: scale(1);
-      transform: scale(1);
-      height: auto;
-      left: 0vw;
-      animation: resumepdfabcabc 1s linear infinite;
+    img.resume_pdf{
+      display: block;
+      position: relative;
+      opacity: 1;
+    /*  transform: rotateX(180deg) rotateY(180deg); */
+      animation: rotateab 1s linear infinite;
       animation-play-state: paused;
       animation-delay: calc(var(--scroll) * -1s);
       animation-iteration-count: 1;
       animation-fill-mode: both;
     }
 
-    @keyframes resumepdfabcabc {
+    @keyframes rotateab {
       0% {
-        position: relative;
-        -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-        -o-transform: scale(1.1);
-        -moz-transform: scale(1.1);
-        transform: scale(1.1);
-        margin-top: 200vh;
+        width: 80%;
         opacity: 1;
+        top: -5vh;
       }
-      45% {
-        position: relative;
-        -webkit-transform: scale(1.7);
-        -ms-transform: scale(1.7);
-        -o-transform: scale(1.7);
-        -moz-transform: scale(1.7);
-        transform: scale(1.7);
+      50%{
+        width: 80%;
         opacity: 1;
-        margin-left: 20vw;
-        margin-top: 50vh;
+        top: -5vh;
       }
-      70% {
-        position: relative;
-        -webkit-transform: scale(1.7);
-        -ms-transform: scale(1.7);
-        -o-transform: scale(1.7);
-        -moz-transform: scale(1.7);
-        transform: scale(1.7);
+      65% {
         opacity: 1;
-        margin-left: -50vw;
-        margin-top: 35vh;
+        top: -5vh;
+      }
+      80% {
+        width: 100%;
+        opacity: 1;
+        top: -5vh;
       }
       100% {
-        position: relative;
-        -webkit-transform: scale(1.2);
-        -ms-transform: scale(1.2);
-        -o-transform: scale(1.2);
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
+        width: 80%;
+        top:-7vh;
         opacity: 1;
-        margin-left: -25vw;
-        margin-top: 35vh;
       }
+    }
+
+  div.forcvportwork {
+  	display: inherit;
+    height: 60vh;
   }
 
   #labtopresumewidth {
     width: 100%;
-    height: 20vh;
-  		overflow: hidden;
-      position: relative;
-      top: -20vh;
-      position: fixed;
-    }
+    height: 40vh;
+  	overflow: hidden;
+    position: relative;
+  }
 
 .container_one.intro{
 	 position: relative;
@@ -1099,7 +1105,7 @@ p.resume-prompt {
 	  width: 80vw;
     overflow: hidden;
   	background: 50vh;
-    margin-top: 3vh;
+    margin-top: 0vh;
     margin-left: auto;
     margin-right: auto;
     border-radius: 50px;
@@ -1112,30 +1118,7 @@ p.resume-prompt {
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     height: 85vh;
-    animation: toptopphoneintroone 2s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
     }
-
-  @keyframes toptopphoneintroone {
-    0% {
-      top: 15vh;
-    }
-    15% {
-      top: -45vh;
-    }
-    25% {
-      top: -65vh;
-    }
-    40% {
-      top: -40vh;
-    }
-    100% {
-      top: -40vh;
-    }
-  }
 
   div.container_one.contactpage{
     position: relative;
@@ -1172,7 +1155,7 @@ p.resume-prompt {
     justify-content: space-between;
 	align-items: center;
     vertical-align: middle;
-	width: 90vw;
+	   width: 90vw;
     height: auto;
   }
 
@@ -1280,29 +1263,10 @@ h2.button-row > a::before, h2.button-row > a::after{
 div.img_relative.labtop{
     width: 95%;
     margin: auto;
-    height: 20vh;
-    animation: toptopphoneintrooneabc 2s linear infinite;
-    animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * -1s);
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
+    height: 80vh;
+    top: 15vh;
     }
 
-  @keyframes toptopphoneintrooneabc {
-    0% {
-      top: 15vh;
-    }
-    30% {
-      top: -50vh;
-    }
-    100% {
-      top: 130vh;
-    }
-  }
-
-  p#hello{
-    margin-top: 0%;
-  }
 
   .img_labtop{
     overflow:hidden;
@@ -1316,7 +1280,6 @@ div.img_relative.labtop{
 	  zoom: 17%;
 	  left: 15%;
   }
-
 
 
   h4  a,
